# Sensor-Fusion

./: README.md  cpu.Dockerfile  docker-compose.yml
docker/: README.md  cpu.Dockerfile
docker/image/usr/share/doro-lxde-wallpapers/: desktop-items-0.conf
docker/installers/: download-ipopt-installer.sh
environment/: tic-analytics.yml
image/etc/supervisor/: supervisord.conf
image/usr/lib/webportal/application/templates/: aboutus.html
ubuntu-setup/: README.md
workspace/: README.md
workspace/assignments/: README.md
workspace/assignments/01-lidar-odometry/: README.md
workspace/assignments/01-lidar-odometry/output/slam_data/key_frames/: key_frame_0.pcd  key_frame_1.pcd  key_frame_10.pcd  key_frame_11.pcd  key_frame_12.pcd  key_frame_13.pcd  key_frame_14.pcd  key_frame_15.pcd  key_frame_16.pcd  key_frame_17.pcd  key_frame_18.pcd  key_frame_19.pcd  key_frame_2.pcd  key_frame_20.pcd  key_frame_21.pcd  key_frame_22.pcd  key_frame_23.pcd  key_frame_24.pcd  key_frame_25.pcd  key_frame_26.pcd  key_frame_27.pcd  key_frame_28.pcd  key_frame_29.pcd  key_frame_3.pcd  key_frame_30.pcd  key_frame_31.pcd  key_frame_32.pcd  key_frame_33.pcd  key_frame_34.pcd  key_frame_35.pcd  key_frame_36.pcd  key_frame_37.pcd  key_frame_38.pcd  key_frame_4.pcd  key_frame_5.pcd  key_frame_6.pcd  key_frame_7.pcd  key_frame_8.pcd  key_frame_9.pcd
workspace/assignments/01-lidar-odometry/src/lidar_localization/: CMakeLists.txt
workspace/assignments/01-lidar-odometry/src/lidar_localization/src/: front_end_node.cpp  test_frame_node.cpp
workspace/assignments/02-lidar-mapping/: README.md
workspace/assignments/02-lidar-mapping/src/lidar_localization/: CMakeLists.txt
workspace/assignments/02-lidar-mapping/src/lidar_localization/Log/: loop_closing_node.ERROR
workspace/assignments/03-inertial-measurement-unit/: .gitignore  README.md
workspace/assignments/03-inertial-measurement-unit/doc/: 01-allan-variance-analysis--summary.json  02-separated-calibration-results.json
workspace/assignments/03-inertial-measurement-unit/doc/solution-guide/: README.md
workspace/assignments/03-inertial-measurement-unit/src/gnss_ins_sim/: CMakeLists.txt  package.xml
workspace/assignments/03-inertial-measurement-unit/src/gnss_ins_sim/config/: publisher.yaml  recorder.yaml  recorder_deterministic_error_calib_accel.yaml  recorder_deterministic_error_calib_gyro.yaml
workspace/assignments/03-inertial-measurement-unit/src/gnss_ins_sim/launch/: gnss_ins_sim.launch  gnss_ins_sim_publisher.launch  gnss_ins_sim_recorder.launch  recorder_deterministic_error_calib_accel.launch  recorder_deterministic_error_calib_gyro.launch
workspace/assignments/03-inertial-measurement-unit/src/gnss_ins_sim/src/: gnss_ins_sim_publisher_node.py  gnss_ins_sim_recorder_node.py
workspace/assignments/03-inertial-measurement-unit/src/imu_calibration/: CMakeLists.txt  README.md  package.xml
workspace/assignments/03-inertial-measurement-unit/src/imu_calibration/action/: CalibrateIMU.action
workspace/assignments/03-inertial-measurement-unit/src/imu_calibration/config/: imu_calibration.yaml
workspace/assignments/03-inertial-measurement-unit/src/imu_calibration/include/: activity.h  allan_variance.h  node_constants.h
workspace/assignments/03-inertial-measurement-unit/src/imu_calibration/launch/: imu_calibration.launch
workspace/assignments/03-inertial-measurement-unit/src/imu_calibration/msg/: AllanVarianceAnalysisResult.msg  AllanVarianceParams.msg
workspace/assignments/03-inertial-measurement-unit/src/imu_calibration/scripts/: estimate_deterministic_error.py  visualize.py
workspace/assignments/03-inertial-measurement-unit/src/imu_calibration/src/: activity.cpp  allan_variance.cpp  node.cpp
workspace/assignments/03-inertial-measurement-unit/src/imu_calibration/srv/: GetAllanVarianceAnalysisResult.srv
workspace/assignments/03-inertial-measurement-unit/src/imu_integration/: CMakeLists.txt
workspace/assignments/03-inertial-measurement-unit/src/imu_integration/config/: generator.yaml
workspace/assignments/03-inertial-measurement-unit/src/imu_integration/launch/: imu_integration.launch
workspace/assignments/03-inertial-measurement-unit/src/imu_integration/rviz/: imu_integration.rviz
workspace/assignments/03-inertial-measurement-unit/src/imu_tk/src/: calibration.cpp
workspace/assignments/04-imu-lidar-gnss-fusion/: README.md
workspace/assignments/04-imu-lidar-gnss-fusion/doc/dataformat/: oxts
workspace/assignments/04-imu-lidar-gnss-fusion/doc/results/imu-lidar/: fused.txt  ground_truth.txt  laser.txt
workspace/assignments/04-imu-lidar-gnss-fusion/doc/results/observability/: acc-som.csv  acc.csv  acc_som.csv  constant-velocity-som.csv  constant-velocity.csv  constant_velocity.csv  constant_velocity_som.csv  motion.csv  motion_som.csv  position.csv  position_som.csv  static-som.csv  static.csv  (+4 more)
workspace/assignments/04-imu-lidar-gnss-fusion/src/gnss_ins_sim/: README.md
workspace/assignments/04-imu-lidar-gnss-fusion/src/lidar_localization/: CMakeLists.txt
workspace/assignments/05-imu-fusion-advanced/: README.md
workspace/assignments/05-imu-fusion-advanced/doc/observability/: 02-eskf--position-observability.csv  02-eskf--position-velocity-observability-som.csv  02-eskf--position-velocity-observability.csv  03-iekf--position-velocity-magneto-observability.csv
workspace/assignments/05-imu-fusion-advanced/src/cloud_msgs/: CMakeLists.txt
workspace/assignments/05-imu-fusion-advanced/src/gnss_ins_sim/: README.md
workspace/assignments/05-imu-fusion-advanced/src/lidar_localization/: CMakeLists.txt
workspace/assignments/05-imu-fusion-advanced/src/lins/: CMakeLists.txt  package.xml
workspace/assignments/05-imu-fusion-advanced/src/mag_table/: geo_mag_declination.cpp
workspace/assignments/06-graph-optimization/: README.md
workspace/assignments/07-sliding-window/: README.md
workspace/assignments/07-sliding-window/src/lidar_localization/: .gitignore  CMakeLists.txt
workspace/assignments/07-sliding-window/src/lio_mapping/: README.md
workspace/assignments/07-sync-and-calib/: README.md
workspace/data/: README.md
(+303 files in other folders)
